# sigma

./: .gitignore  CMakeLists.txt  README.md  SyntaxTree.stx  assembly_test.asm
src/: Main.cpp
src/Backend/CodeGen/Asm/: AbstractSyntaxTree.h  AbstractSyntaxTree.inl  Add.cpp  Add.h  Array.cpp  Array.h  AsmContext.cpp  AsmContext.h  AsmWriter.cpp  AsmWriter.h  (+35 more)
src/Backend/Linker/: Linker.h  Linker.inl
src/Driver/: AbstractSyntaxTree.h  AbstractSyntaxTree.inl  BuildfileBuilder.cpp  BuildfileBuilder.h  Driver.cpp  Driver.h  Error.cpp  Error.h  Lexer.cpp  Lexer.h  lex_file.lx  syntax.stx
src/Driver/AST/: AST.h  Equal.cpp  Equal.h  Expression.h  Identifier.cpp  Identifier.h  Statement.h  String.cpp  String.h
src/Frontend/AST/: AST.h  Add.cpp  Add.h  Assign.cpp  Assign.h  AutoAssign.cpp  AutoAssign.h  Call.cpp  Call.h  Div.cpp  Div.h  Dot.cpp  Dot.h  Expression.h  ExternFunction.cpp  ExternFunction.h  ForeignFunction.cpp  ForeignFunction.h  Function.cpp  Function.h  If.cpp  If.h  ImplFunc.cpp  ImplFunc.h  Index.cpp  Index.h  Log.cpp  Log.h  Modulo.cpp  Modulo.h  Number.cpp  Number.h  Prototype.cpp  Prototype.h  Repeat.cpp  Repeat.h  Return.cpp  Return.h  String.cpp  String.h  (+9 more)
src/Frontend/LexicalAnalysis/: AbstractSyntaxTree.h  AbstractSyntaxTree.inl  Lexer.cpp  Lexer.h  lex_file.lx  syntax.stx
src/Frontend/Preprocessor/: AbstractSyntaxTree.h  AbstractSyntaxTree.inl  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  lex_file.lx  syntax.stx
std/core/: core.asm  core.si
std/gfx/: opengl.ep  sdl.ep
std/lua/: lua.ep
test/: sproj.build
test/src/: test.asm  test.si
(+152 files in other folders)
